<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtBil1"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/masukkan_bilangan_pertama"
        android:inputType="numberDecimal"
        android:layout_below="@id/textView"
        android:layout_marginTop="70dp"/>

    <EditText
        android:id="@+id/txtBil2"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/masukkan_bilangan_kedua"
        android:inputType="numberDecimal"
        android:layout_below="@id/txtBil1"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menjumlahkan_2_bilangan"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnCekBil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hitung_bilangan"
        android:layout_below="@id/txtBil2"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil_penjumlahan"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:layout_below="@id/btnCekBil"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/hasil"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingHorizontal="65dp"
        android:layout_below="@id/textView2"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>